<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/contact"
        app:showAsAction="always"
        android:icon="@drawable/ic_contact"/>

    <item
        android:orderInCategory="10"
        android:id="@+id/action_order"
        app:showAsAction="always"
        android:title="@string/order"
        android:icon="@drawable/ic_action_name"/>

    <item
        android:orderInCategory="20"
        android:id="@+id/action_status"
        app:showAsAction="ifRoom"
        android:title="@string/status"
        android:icon="@drawable/ic_status"/>

    <item
        android:orderInCategory="30"
        android:id="@+id/action_favorites"
        app:showAsAction="never"
        android:title="@string/favorites"/>

</menu>